alpm-repo-db/tests/parse_error_snapshots/files/empty_line_in_list_of_paths.snap
---
source: alpm-repo-db/tests/parse_errors.rs
description: "%FILES%\nusr/\nusr/bin/\n\nusr/bin/foo\n"
expression: error.to_string()
---
Parser failed with the following error:
parse error at line 5, column 1
  |
5 | usr/bin/foo
  | ^
invalid trailing content after newline.
